<resources>
    <string name="app_name">Mera Tune</string>
    <string name="search_hint">Apna Naam Enter Karein…</string>
    <string name="set">Set</string>
    <string name="active_ringtone">Active</string>
    <string name="music_library">Music library</string>
    <string name="profile">Profile</string>
    <string name="profile_screen_title">Mera Profile</string>
    <string name="profile_selected_language">Selected Language</string>
    <string name="profile_help_support">Help &amp; Support</string>
    <string name="profile_help_support_subtitle">Get help and contact support</string>
    <string name="profile_privacy_policy">Privacy Policy</string>
    <string name="profile_privacy_policy_subtitle">Privacy &amp; app policies</string>
    <string name="profile_delete_account">Delete Account</string>
    <string name="profile_delete_account_subtitle">Request account and data deletion</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_logout_toast">Logged out successfully</string>
    <string name="profile_version">Version %1$s</string>
    <string name="profile_language_coming_soon">Language settings coming soon</string>
    <string name="profile_help_coming_soon">Help &amp; support coming soon</string>
    <string name="profile_privacy_coming_soon">Privacy policy coming soon</string>
    <string name="play_tune">Play tune</string>
    <string name="set_tune_toast">Set tune: %1$s</string>
    <string name="ringtone_setting">Setting ringtone…</string>
    <string name="ringtone_set_success">%1$s is now your ringtone</string>
    <string name="ringtone_set_error">Could not set ringtone. Please try again.</string>
    <string name="ringtone_permission_required">Allow modify system settings to set ringtone</string>
    <string name="set_ringtone_sheet_title">Aap Ise Kaise Set Karna Chahte Hain?</string>
    <string name="set_ringtone_sheet_subtitle">Choose audio only, or add a photo for incoming calls</string>
    <string name="set_ringtone_option_audio_title">Sirf Ringtone</string>
    <string name="set_ringtone_option_audio_subtitle">Set this tune as your default ringtone</string>
    <string name="set_ringtone_option_everyone_title">Ringtone Ke Saath Photo</string>
    <string name="set_ringtone_option_everyone_subtitle">Show this photo for all incoming calls</string>
    <string name="set_ringtone_option_contact_title">Ringtone + Photo Selected Contacts Ke Liye</string>
    <string name="set_ringtone_option_contact_subtitle">Saves the photo on that contact so Phone shows it on incoming calls</string>
    <string name="upload_photo_sheet_title">Apni Photo Upload Karein</string>
    <string name="upload_photo_camera_title">Camera</string>
    <string name="upload_photo_camera_subtitle">Take a new photo</string>
    <string name="upload_photo_gallery_title">Upload from Gallery</string>
    <string name="upload_photo_gallery_subtitle">Choose from your photos</string>
    <string name="upload_photo_preview_content_description">Selected photo</string>
    <string name="upload_photo_camera_error">Could not open the camera. Please try gallery instead.</string>
    <string name="call_theme_contacts_permission_required">Allow contacts access to choose a person and save their photo</string>
    <string name="call_theme_contacts_write_permission_required">Allow contacts write access so the photo can appear on the Phone call screen</string>
    <string name="call_theme_contact_photo_error">Ringtone was set, but the contact photo could not be updated. Check Contacts permission and try again.</string>
    <string name="call_theme_phone_permission_required">Allow phone access to show the photo on incoming calls</string>
    <string name="call_theme_contact_no_phone">That contact has no phone number. Pick someone else.</string>
    <string name="call_theme_image_required">Please choose a photo</string>
    <string name="call_theme_image_save_error">Could not save the photo. Please try again.</string>
    <string name="call_theme_set_everyone_success">%1$s set with photo for all incoming calls</string>
    <string name="call_theme_set_contact_success">%1$s set for %2$s. Their Contacts photo was updated for the Phone call screen.</string>
    <string name="call_theme_selected_contact">this contact</string>
    <string name="call_theme_incoming_title">Incoming call</string>
    <string name="call_theme_calling_status">Calling...</string>
    <string name="call_theme_incoming_text">%1$s</string>
    <string name="call_theme_notification_channel">Incoming call themes</string>
    <string name="call_theme_notification_channel_desc">Shows your chosen photo when someone calls</string>
    <string name="call_theme_notification_channel_silent">Incoming call banner</string>
    <string name="call_theme_image_content_description">Incoming call photo</string>
    <string name="call_theme_accept">Accept Call</string>
    <string name="call_theme_decline">Reject Call</string>
    <string name="call_theme_now">now</string>
    <string name="call_theme_unknown_caller">Unknown</string>
    <string name="call_theme_mobile_prefix">Mobile</string>
    <string name="call_theme_mobile_label">Mobile %1$s</string>
    <string name="call_theme_control_failed">Could not control the call. Use the Phone app buttons.</string>
    <string name="playback_error">Unable to play this tune</string>
    <string name="load_error_retry">Tap to retry</string>
    <string name="load_error_with_retry">%1$s\n\nTap to retry.</string>
    <string name="empty_search_message">We couldn\u2019t find ringtone for %1$s, Be the first to create one</string>
    <string name="create_ringtone">Create Ringtone</string>
    <string name="back">Back</string>
    <string name="create_form_title">%1$s, Apne Naam Ki Ringtone Banaiye!</string>
    <string name="create_form_subtitle">Batao, Kaisi Ringtone Chahiye?</string>
    <string name="create_form_enter_name">Enter name</string>
    <string name="create_form_choose_language">Choose Language</string>
    <string name="create_form_voice_male">Male voice</string>
    <string name="create_form_voice_female">Female voice</string>
    <string name="create_form_language_english">English</string>
    <string name="create_form_language_hindi">हिंदी</string>
    <string name="create_form_language_telugu">తెలుగు</string>
    <string name="create_form_language_tamil">தமிழ்</string>
    <string name="create_form_language_kannada">ಕನ್ನಡ</string>
    <string name="create_form_language_malayalam">മലയാളം</string>
    <string name="create_form_language_marathi">मराठी</string>
    <string name="create_form_language_odia">ଓଡ଼ିଆ</string>
    <string name="create_form_language_bengali">বাংলা</string>
    <string name="create_form_continue">Aage badhein</string>
    <string name="create_form_name_required">Please enter a name</string>
    <string name="processing_title">%1$s, Aapke Naam Ki Ringtone Ban Rahi Hai</string>
    <string name="processing_subtitle">Bas %1$s me aapki ringtone taiyar!</string>
    <string name="processing_subtitle_highlight">10–15 second</string>
    <string name="processing_step_preparing">Aawaz Taiyar Ho Rahi Hai</string>
    <string name="processing_step_composing">Gaane Me Mix Ho Raha Hai</string>
    <string name="processing_step_ready">Ringtone Ready!</string>
    <string name="processing_footer">Crafting something special for you…</string>
    <string name="ready_title">%1$s, Aapki Ringtone Tayyar Hai!</string>
    <string name="ready_set_ringtone">Ringtone set karein</string>
    <string name="ready_rewind">Rewind 10 seconds</string>
    <string name="ready_forward">Forward 10 seconds</string>
    <string name="create_form_title_generic">Apne Naam Ki Ringtone Banaiye!</string>
    <string name="create_form_name_too_long">Naam 30 letters se chhota rakhein</string>
    <string name="create_form_name_invalid">Naam me sirf letters likhein</string>
    <string name="create_form_language_hint">Isi bhasha me aapka naam bola jayega</string>
    <string name="create_form_language_coming_soon">%1$s jaldi aa raha hai</string>
    <string name="song_choice_title">%1$s Ke Liye Kaunsi Dhun Pasand Hai?</string>
    <string name="song_choice_subtitle">Ek ringtone choose karo, hum usse %1$s ke naam mein bana denge.</string>
    <string name="song_choice_filter_all">Sab</string>
    <string name="song_choice_sample">Sample: %1$s</string>
    <string name="song_choice_replaces">\"%1$s\" ki jagah \"%2$s\" bola jayega</string>
    <string name="song_choice_cta">%1$s Ke Naam Se Banaiye</string>
    <string name="song_choice_cta_disabled">Pehle Ek Gaana Chuniye</string>
    <string name="song_choice_empty_title">Is bhasha me abhi gaane nahi hain</string>
    <string name="song_choice_empty_message">%1$s ke gaane jaldi aa rahe hain. Tab tak Hindi gaane try karein?</string>
    <string name="song_choice_empty_hindi_cta">Hindi Gaane Dikhaiye</string>
    <string name="song_choice_empty_change_language">Bhasha Badlein</string>
    <string name="song_choice_fallback_banner">%1$s me gaane nahi mile, Hindi gaane dikha rahe hain</string>
    <string name="song_choice_selected_a11y">%1$s selected</string>
    <string name="processing_song_line">Gaana: %1$s · %2$s</string>
    <string name="processing_tip_1">Tip: Ringtone ke saath apni photo bhi laga sakte hain</string>
    <string name="processing_tip_2">Aapka naam gaane ki dhun me mix ho raha hai</string>
    <string name="processing_tip_3">Pasand na aaye? Dusra gaana chun kar phir try karein</string>
    <string name="processing_taking_longer">Thoda zyada time lag raha hai, bas thodi der…</string>
    <string name="processing_waiting">Line me hain, bas thodi der…</string>
    <string name="processing_error_title">Oops! Ringtone nahi ban paayi</string>
    <string name="processing_error_generic">Kuch gadbad ho gayi. Dobara try karein.</string>
    <string name="processing_error_network">Internet connection nahi mila. Check karke dobara try karein.</string>
    <string name="processing_error_timeout">Bahut der lag gayi. Thodi der baad dobara try karein.</string>
    <string name="processing_try_later_title">Ringtone abhi nahi ban payi</string>
    <string name="processing_try_later_message">Kripya kuch der mein try karein.</string>
    <string name="processing_error_language_unsupported">%1$s me naam bolna abhi possible nahi. Dusri bhasha chuniye.</string>
    <string name="processing_error_quota">Aaj ki limit poori ho gayi. Kal dobara try karein.</string>
    <string name="processing_error_quota_legacy_hint">Dobara login karke poori limit paayein</string>
    <string name="processing_error_song_unavailable">Yeh gaana abhi available nahi hai. Dusra gaana chuniye.</string>
    <string name="processing_error_name_too_long">Yeh naam is gaane me fit nahi hota. Dusra gaana chuniye.</string>
    <string name="processing_error_name_rejected">Yeh naam use nahi kar sakte. Dusra naam try karein.</string>
    <string name="processing_error_session">Session expire ho gaya. Dobara login karein.</string>
    <string name="processing_error_subscription">Ringtone banane ke liye subscription chahiye</string>
    <string name="ready_go_home">Home par jayen</string>
    <string name="paywall_pending_title">Payment Pending</string>
    <string name="paywall_pending_body">Your payment is being verified. Please wait while we confirm it.</string>
    <string name="paywall_pending_cta">Payment Status Dekhein</string>
    <string name="paywall_failed_title">Payment Failed</string>
    <string name="paywall_failed_body">We couldn’t complete your payment. Please try again or use another payment method.</string>
    <string name="paywall_failed_reason_bank">Payment declined by your bank</string>
    <string name="paywall_failed_reason_funds">Insufficient funds</string>
    <string name="paywall_failed_reason_details">Incorrect payment details</string>
    <string name="paywall_failed_cta">Dobara Try Karein</string>
</resources>